--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="life_is_too_short_don_t_forget_anything_just_n_note_it">Life is too short don\'t forget anything just\n Note it!</string>
     <string name="register">Register</string>
     <string name="date">Date</string>
+    <string name="todo77">TODO</string>
 </resources>
